--- a/final_files/Manuscript/POMP_GroupLevel_ManuscriptOutline_v4.Rmd
+++ b/final_files/Manuscript/POMP_GroupLevel_ManuscriptOutline_v4.Rmd
@@ -225,4 +225,29 @@ group_traj |>
   )
 
 ```
+```{r retics}
+group_traj |>
+  filter(variable%in%c("R")) |>
+  mutate(variable_name=case_match(variable,
+                                  "R"~"Reticulocytes"
+                                 )) |>
+  ggplot()+
+  geom_line(aes(x=time,y=med,col=pABA))+
+  geom_ribbon(aes(x=time,ymin=lo,ymax=hi,fill=pABA),alpha=0.2)+
+  scale_y_log10(breaks = trans_breaks("log10", function(x) 10^x), 
+                labels=trans_format('log10',math_format(10^.x)))+ 
+  xlab("Day post-infection")+ylab("Density per microlitre")+
+  scale_colour_manual(values=cbPalette)+
+  scale_fill_manual(values=cbPalette)+
+  theme_bw()+
+  theme(strip.background=element_blank(),
+        panel.grid = element_blank(),
+        legend.position="right",
+        axis.title=element_text(size=15),
+        axis.text=element_text(size=13),
+        legend.text=element_text(size=14),
+        strip.text=element_text(size=12)
+  )
+
+```
 
